# my-project

./: Dockerfile  README.md  __init__.py  app.py  inference.py  pyproject.toml  requirements.txt
environment/: env.py  tasks.py
server/: app.py
